// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate options should throw an error on the "deleteOriginalAssets" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.deleteOriginalAssets should be a boolean."
`;

exports[`validate options should throw an error on the "deleteOriginalAssets" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.deleteOriginalAssets should be a boolean."
`;

exports[`validate options should throw an error on the "deleteOriginalAssets" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.deleteOriginalAssets should be a boolean."
`;

exports[`validate options should throw an error on the "filename" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be a string."
`;

exports[`validate options should throw an error on the "filename" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be a string."
`;

exports[`validate options should throw an error on the "filename" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be a string."
`;

exports[`validate options should throw an error on the "filename" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be a string."
`;

exports[`validate options should throw an error on the "filter" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate options should throw an error on the "filter" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate options should throw an error on the "filter" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate options should throw an error on the "filter" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate options should throw an error on the "filter" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate options should throw an error on the "filter" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate options should throw an error on the "minimizerOptions" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be an object:
   object { … }
   -> Options for \`imageMinimizerOptions\`."
`;

exports[`validate options should throw an error on the "minimizerOptions" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be an object:
   object { … }
   -> Options for \`imageMinimizerOptions\`."
`;

exports[`validate options should throw an error on the "minimizerOptions" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be an object:
   object { … }
   -> Options for \`imageMinimizerOptions\`."
`;

exports[`validate options should throw an error on the "minimizerOptions" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be an object:
   object { … }
   -> Options for \`imageMinimizerOptions\`."
`;

exports[`validate options should throw an error on the "minimizerOptions" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be an object:
   object { … }
   -> Options for \`imageMinimizerOptions\`."
`;

exports[`validate options should throw an error on the "severityError" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   boolean | string
   -> Allows to choose how errors are displayed.
   Details:
    * options.severityError should be a boolean.
    * options.severityError should be a string."
`;

exports[`validate options should throw an error on the "severityError" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   boolean | string
   -> Allows to choose how errors are displayed.
   Details:
    * options.severityError should be a boolean.
    * options.severityError should be a string."
`;

exports[`validate options should throw an error on the "severityError" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   boolean | string
   -> Allows to choose how errors are displayed.
   Details:
    * options.severityError should be a boolean.
    * options.severityError should be a string."
`;

exports[`validate options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;

exports[`validate options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;

exports[`validate options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;

exports[`validate options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;

exports[`validate options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;

exports[`validate options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets? }"
`;
